D5.4: new URL() auf URI.create().toURL() umgestellt